deploy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digito
  labels:
    app: digito
  annotations:
    nginx.org/rewrites: "serviceName=digito-api rewrite=/;serviceName=digito-ui rewrite=/;"

spec:
  rules:
    - host: digito.jtalk.me
      http:
        paths:
        - path: /api
          backend:
            serviceName: digito-api
            servicePort: 80
        - path: /
          backend:
            serviceName: digito-ui
            servicePort: 80
